--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@fontsource/roboto": "^5.0.13",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.1",
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
     "@mui/icons-material": "^5.15.16",
@@ -28,6 +30,11 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "react-image-magnify": "^2.7.4",
+    "react-insta-stories": "^2.6.2",
+    "react-modal": "^3.16.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
     "stories-react": "^1.1.2"
   },
